--- a/FinalWork/Doc/latex/annotated.tex
+++ b/FinalWork/Doc/latex/annotated.tex
@@ -1,4 +1,5 @@
-\doxysection{Data Structures}
-Here are the data structures with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{struct_temperature_record}{Temperature\+Record}} \\*Структура для хранения данных о температуре }{\pageref{struct_temperature_record}}{}
+\doxysection{Структуры данных}
+Структуры данных с их кратким описанием.\begin{DoxyCompactList}
+\item\contentsline{section}{\textbf{ Temperature\+Node} \\*Узел односвязного списка для \doxyref{Temperature\+Record}{стр.}{struct_temperature_record} }{\pageref{struct_temperature_node}}{}
+\item\contentsline{section}{\textbf{ Temperature\+Record} \\*Структура для хранения данных о температуре }{\pageref{struct_temperature_record}}{}
 \end{DoxyCompactList}
