--- a/FinalWork/Doc/latex/menu_8c.tex
+++ b/FinalWork/Doc/latex/menu_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{D\+:/\+Qt\+\_\+\+Project/\+MFTI/\+Course-\/\+C-\/\+Basic-\/\+Level/\+Final\+Work/menu.c File Reference}
-\hypertarget{menu_8c}{}\label{menu_8c}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.c@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.c}}
+\doxysection{Файл D\+:/\+Qt\+\_\+\+Project/\+MFTI/\+Course-\/\+C-\/\+Basic-\/\+Level/\+Final\+Work/menu.c}
+\label{menu_8c}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.c@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.c}}
 
 
 Реализация функций меню для программы статистики температуры  
@@ -11,37 +11,35 @@
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include "{}config.\+h"{}}\newline
-\doxysubsubsection*{Functions}
+\doxysubsubsection*{Функции}
 \begin{DoxyCompactItemize}
 \item 
-void \mbox{\hyperlink{menu_8c_a3f59019099538e8aa23e72a544461c26}{display\+Main\+Menu}} ()
+void \textbf{ display\+Main\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает главное меню программы \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8c_ae56915d57ca4e27bd132a459ca83ed3d}{handle\+User\+Choice}} (int choice)
+void \textbf{ handle\+User\+Choice} (int choice)
 \begin{DoxyCompactList}\small\item\em Обрабатывает выбор пользователя в меню \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8c_a7674a0c3701093c68e0ebe377251b0f1}{display\+Add\+Record\+Menu}} ()
+void \textbf{ display\+Add\+Record\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает меню добавления новой записи о температуре \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8c_a7c177e87305e3a58c5ed79e8598ae687}{display\+Remove\+Record\+Menu}} ()
+void \textbf{ display\+Remove\+Record\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает меню удаления записи о температуре \end{DoxyCompactList}\item 
-\Hypertarget{menu_8c_aa4da8ae286f95189175c89bbf249851f}\label{menu_8c_aa4da8ae286f95189175c89bbf249851f} 
-void {\bfseries display\+Stats\+Menu} ()
+void \textbf{ display\+Stats\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает меню статистики \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8c_a4cfa87a81a57d04b37b450580084e9d2}{load\+Data\+From\+File}} ()
+void \textbf{ load\+Data\+From\+File} ()
 \begin{DoxyCompactList}\small\item\em Загружает данные из CSV файла \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8c_ac396e0896eccd3a8bf8439adb18bf394}{display\+All\+Records\+Menu}} ()
+void \textbf{ display\+All\+Records\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает все записи о температуре \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
-\doxysubsection{Detailed Description}
+\doxysubsection{Подробное описание}
 Реализация функций меню для программы статистики температуры 
 
 
 
 \label{doc-func-members}
-\Hypertarget{menu_8c_doc-func-members}
-\doxysubsection{Function Documentation}
-\Hypertarget{menu_8c_a7674a0c3701093c68e0ebe377251b0f1}\index{menu.c@{menu.c}!displayAddRecordMenu@{displayAddRecordMenu}}
+\doxysubsection{Функции}
+\index{menu.c@{menu.c}!displayAddRecordMenu@{displayAddRecordMenu}}
 \index{displayAddRecordMenu@{displayAddRecordMenu}!menu.c@{menu.c}}
-\doxysubsubsection{\texorpdfstring{displayAddRecordMenu()}{displayAddRecordMenu()}}
+\doxysubsubsection{displayAddRecordMenu()}
 {\footnotesize\ttfamily \label{menu_8c_a7674a0c3701093c68e0ebe377251b0f1} 
 void display\+Add\+Record\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
@@ -49,9 +47,9 @@ void display\+Add\+Record\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCapti
 
 Отображает меню добавления новой записи о температуре 
 
-Отображает меню добавления записи \Hypertarget{menu_8c_ac396e0896eccd3a8bf8439adb18bf394}\index{menu.c@{menu.c}!displayAllRecordsMenu@{displayAllRecordsMenu}}
+Отображает меню добавления записи \index{menu.c@{menu.c}!displayAllRecordsMenu@{displayAllRecordsMenu}}
 \index{displayAllRecordsMenu@{displayAllRecordsMenu}!menu.c@{menu.c}}
-\doxysubsubsection{\texorpdfstring{displayAllRecordsMenu()}{displayAllRecordsMenu()}}
+\doxysubsubsection{displayAllRecordsMenu()}
 {\footnotesize\ttfamily \label{menu_8c_ac396e0896eccd3a8bf8439adb18bf394} 
 void display\+All\+Records\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
@@ -59,9 +57,9 @@ void display\+All\+Records\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCapt
 
 Отображает все записи о температуре 
 
-Отображает все записи \Hypertarget{menu_8c_a3f59019099538e8aa23e72a544461c26}\index{menu.c@{menu.c}!displayMainMenu@{displayMainMenu}}
+Отображает все записи \index{menu.c@{menu.c}!displayMainMenu@{displayMainMenu}}
 \index{displayMainMenu@{displayMainMenu}!menu.c@{menu.c}}
-\doxysubsubsection{\texorpdfstring{displayMainMenu()}{displayMainMenu()}}
+\doxysubsubsection{displayMainMenu()}
 {\footnotesize\ttfamily \label{menu_8c_a3f59019099538e8aa23e72a544461c26} 
 void display\+Main\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
@@ -69,9 +67,9 @@ void display\+Main\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
 Отображает главное меню программы 
 
-Отображает главное меню \Hypertarget{menu_8c_a7c177e87305e3a58c5ed79e8598ae687}\index{menu.c@{menu.c}!displayRemoveRecordMenu@{displayRemoveRecordMenu}}
+Отображает главное меню \index{menu.c@{menu.c}!displayRemoveRecordMenu@{displayRemoveRecordMenu}}
 \index{displayRemoveRecordMenu@{displayRemoveRecordMenu}!menu.c@{menu.c}}
-\doxysubsubsection{\texorpdfstring{displayRemoveRecordMenu()}{displayRemoveRecordMenu()}}
+\doxysubsubsection{displayRemoveRecordMenu()}
 {\footnotesize\ttfamily \label{menu_8c_a7c177e87305e3a58c5ed79e8598ae687} 
 void display\+Remove\+Record\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
@@ -79,9 +77,19 @@ void display\+Remove\+Record\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCa
 
 Отображает меню удаления записи о температуре 
 
-Отображает меню удаления записи \Hypertarget{menu_8c_ae56915d57ca4e27bd132a459ca83ed3d}\index{menu.c@{menu.c}!handleUserChoice@{handleUserChoice}}
+Отображает меню удаления записи \index{menu.c@{menu.c}!displayStatsMenu@{displayStatsMenu}}
+\index{displayStatsMenu@{displayStatsMenu}!menu.c@{menu.c}}
+\doxysubsubsection{displayStatsMenu()}
+{\footnotesize\ttfamily \label{menu_8c_aa4da8ae286f95189175c89bbf249851f} 
+void display\+Stats\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
+
+
+
+Отображает меню статистики 
+
+\index{menu.c@{menu.c}!handleUserChoice@{handleUserChoice}}
 \index{handleUserChoice@{handleUserChoice}!menu.c@{menu.c}}
-\doxysubsubsection{\texorpdfstring{handleUserChoice()}{handleUserChoice()}}
+\doxysubsubsection{handleUserChoice()}
 {\footnotesize\ttfamily \label{menu_8c_ae56915d57ca4e27bd132a459ca83ed3d} 
 void handle\+User\+Choice (\begin{DoxyParamCaption}\item[{int}]{choice}{}\end{DoxyParamCaption})}
 
@@ -90,13 +98,13 @@ void handle\+User\+Choice (\begin{DoxyParamCaption}\item[{int}]{choice}{}\end{Do
 Обрабатывает выбор пользователя в меню 
 
 
-\begin{DoxyParams}{Parameters}
+\begin{DoxyParams}{Аргументы}
 {\em choice} & Выбранный пункт меню \\
 \hline
 \end{DoxyParams}
-\Hypertarget{menu_8c_a4cfa87a81a57d04b37b450580084e9d2}\index{menu.c@{menu.c}!loadDataFromFile@{loadDataFromFile}}
+\index{menu.c@{menu.c}!loadDataFromFile@{loadDataFromFile}}
 \index{loadDataFromFile@{loadDataFromFile}!menu.c@{menu.c}}
-\doxysubsubsection{\texorpdfstring{loadDataFromFile()}{loadDataFromFile()}}
+\doxysubsubsection{loadDataFromFile()}
 {\footnotesize\ttfamily \label{menu_8c_a4cfa87a81a57d04b37b450580084e9d2} 
 void load\+Data\+From\+File (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
