--- a/FinalWork/Doc/latex/menu_8h.tex
+++ b/FinalWork/Doc/latex/menu_8h.tex
@@ -1,41 +1,39 @@
-\doxysection{D\+:/\+Qt\+\_\+\+Project/\+MFTI/\+Course-\/\+C-\/\+Basic-\/\+Level/\+Final\+Work/menu.h File Reference}
-\hypertarget{menu_8h}{}\label{menu_8h}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.h@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.h}}
+\doxysection{Файл D\+:/\+Qt\+\_\+\+Project/\+MFTI/\+Course-\/\+C-\/\+Basic-\/\+Level/\+Final\+Work/menu.h}
+\label{menu_8h}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.h@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.h}}
 
 
 Заголовочный файл для функций меню  
 
 
-\doxysubsubsection*{Functions}
+\doxysubsubsection*{Функции}
 \begin{DoxyCompactItemize}
 \item 
-void \mbox{\hyperlink{menu_8h_a3f59019099538e8aa23e72a544461c26}{display\+Main\+Menu}} ()
+void \textbf{ display\+Main\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает главное меню \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8h_ae56915d57ca4e27bd132a459ca83ed3d}{handle\+User\+Choice}} (int choice)
+void \textbf{ handle\+User\+Choice} (int choice)
 \begin{DoxyCompactList}\small\item\em Обрабатывает выбор пользователя в меню \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8h_a7674a0c3701093c68e0ebe377251b0f1}{display\+Add\+Record\+Menu}} ()
+void \textbf{ display\+Add\+Record\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает меню добавления записи \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8h_a7c177e87305e3a58c5ed79e8598ae687}{display\+Remove\+Record\+Menu}} ()
+void \textbf{ display\+Remove\+Record\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает меню удаления записи \end{DoxyCompactList}\item 
-\Hypertarget{menu_8h_aa4da8ae286f95189175c89bbf249851f}\label{menu_8h_aa4da8ae286f95189175c89bbf249851f} 
-void {\bfseries display\+Stats\+Menu} ()
+void \textbf{ display\+Stats\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает меню статистики \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8h_a4cfa87a81a57d04b37b450580084e9d2}{load\+Data\+From\+File}} ()
+void \textbf{ load\+Data\+From\+File} ()
 \begin{DoxyCompactList}\small\item\em Обрабатывает загрузку данных из файла \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{menu_8h_ac396e0896eccd3a8bf8439adb18bf394}{display\+All\+Records\+Menu}} ()
+void \textbf{ display\+All\+Records\+Menu} ()
 \begin{DoxyCompactList}\small\item\em Отображает все записи \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
-\doxysubsection{Detailed Description}
+\doxysubsection{Подробное описание}
 Заголовочный файл для функций меню 
 
 
 
 \label{doc-func-members}
-\Hypertarget{menu_8h_doc-func-members}
-\doxysubsection{Function Documentation}
-\Hypertarget{menu_8h_a7674a0c3701093c68e0ebe377251b0f1}\index{menu.h@{menu.h}!displayAddRecordMenu@{displayAddRecordMenu}}
+\doxysubsection{Функции}
+\index{menu.h@{menu.h}!displayAddRecordMenu@{displayAddRecordMenu}}
 \index{displayAddRecordMenu@{displayAddRecordMenu}!menu.h@{menu.h}}
-\doxysubsubsection{\texorpdfstring{displayAddRecordMenu()}{displayAddRecordMenu()}}
+\doxysubsubsection{displayAddRecordMenu()}
 {\footnotesize\ttfamily \label{menu_8h_a7674a0c3701093c68e0ebe377251b0f1} 
 void display\+Add\+Record\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
@@ -43,9 +41,9 @@ void display\+Add\+Record\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCapti
 
 Отображает меню добавления записи 
 
-Отображает меню добавления записи \Hypertarget{menu_8h_ac396e0896eccd3a8bf8439adb18bf394}\index{menu.h@{menu.h}!displayAllRecordsMenu@{displayAllRecordsMenu}}
+Отображает меню добавления записи \index{menu.h@{menu.h}!displayAllRecordsMenu@{displayAllRecordsMenu}}
 \index{displayAllRecordsMenu@{displayAllRecordsMenu}!menu.h@{menu.h}}
-\doxysubsubsection{\texorpdfstring{displayAllRecordsMenu()}{displayAllRecordsMenu()}}
+\doxysubsubsection{displayAllRecordsMenu()}
 {\footnotesize\ttfamily \label{menu_8h_ac396e0896eccd3a8bf8439adb18bf394} 
 void display\+All\+Records\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
@@ -53,9 +51,9 @@ void display\+All\+Records\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCapt
 
 Отображает все записи 
 
-Отображает все записи \Hypertarget{menu_8h_a3f59019099538e8aa23e72a544461c26}\index{menu.h@{menu.h}!displayMainMenu@{displayMainMenu}}
+Отображает все записи \index{menu.h@{menu.h}!displayMainMenu@{displayMainMenu}}
 \index{displayMainMenu@{displayMainMenu}!menu.h@{menu.h}}
-\doxysubsubsection{\texorpdfstring{displayMainMenu()}{displayMainMenu()}}
+\doxysubsubsection{displayMainMenu()}
 {\footnotesize\ttfamily \label{menu_8h_a3f59019099538e8aa23e72a544461c26} 
 void display\+Main\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
@@ -63,9 +61,9 @@ void display\+Main\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
 Отображает главное меню 
 
-Отображает главное меню \Hypertarget{menu_8h_a7c177e87305e3a58c5ed79e8598ae687}\index{menu.h@{menu.h}!displayRemoveRecordMenu@{displayRemoveRecordMenu}}
+Отображает главное меню \index{menu.h@{menu.h}!displayRemoveRecordMenu@{displayRemoveRecordMenu}}
 \index{displayRemoveRecordMenu@{displayRemoveRecordMenu}!menu.h@{menu.h}}
-\doxysubsubsection{\texorpdfstring{displayRemoveRecordMenu()}{displayRemoveRecordMenu()}}
+\doxysubsubsection{displayRemoveRecordMenu()}
 {\footnotesize\ttfamily \label{menu_8h_a7c177e87305e3a58c5ed79e8598ae687} 
 void display\+Remove\+Record\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
@@ -73,9 +71,19 @@ void display\+Remove\+Record\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCa
 
 Отображает меню удаления записи 
 
-Отображает меню удаления записи \Hypertarget{menu_8h_ae56915d57ca4e27bd132a459ca83ed3d}\index{menu.h@{menu.h}!handleUserChoice@{handleUserChoice}}
+Отображает меню удаления записи \index{menu.h@{menu.h}!displayStatsMenu@{displayStatsMenu}}
+\index{displayStatsMenu@{displayStatsMenu}!menu.h@{menu.h}}
+\doxysubsubsection{displayStatsMenu()}
+{\footnotesize\ttfamily \label{menu_8h_aa4da8ae286f95189175c89bbf249851f} 
+void display\+Stats\+Menu (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
+
+
+
+Отображает меню статистики 
+
+\index{menu.h@{menu.h}!handleUserChoice@{handleUserChoice}}
 \index{handleUserChoice@{handleUserChoice}!menu.h@{menu.h}}
-\doxysubsubsection{\texorpdfstring{handleUserChoice()}{handleUserChoice()}}
+\doxysubsubsection{handleUserChoice()}
 {\footnotesize\ttfamily \label{menu_8h_ae56915d57ca4e27bd132a459ca83ed3d} 
 void handle\+User\+Choice (\begin{DoxyParamCaption}\item[{int}]{choice}{}\end{DoxyParamCaption})}
 
@@ -84,13 +92,13 @@ void handle\+User\+Choice (\begin{DoxyParamCaption}\item[{int}]{choice}{}\end{Do
 Обрабатывает выбор пользователя в меню 
 
 
-\begin{DoxyParams}{Parameters}
+\begin{DoxyParams}{Аргументы}
 {\em choice} & Выбранный пункт меню \\
 \hline
 \end{DoxyParams}
-\Hypertarget{menu_8h_a4cfa87a81a57d04b37b450580084e9d2}\index{menu.h@{menu.h}!loadDataFromFile@{loadDataFromFile}}
+\index{menu.h@{menu.h}!loadDataFromFile@{loadDataFromFile}}
 \index{loadDataFromFile@{loadDataFromFile}!menu.h@{menu.h}}
-\doxysubsubsection{\texorpdfstring{loadDataFromFile()}{loadDataFromFile()}}
+\doxysubsubsection{loadDataFromFile()}
 {\footnotesize\ttfamily \label{menu_8h_a4cfa87a81a57d04b37b450580084e9d2} 
 void load\+Data\+From\+File (\begin{DoxyParamCaption}{}{}\end{DoxyParamCaption})}
 
