--- a/FinalWork/Doc/latex/menu_8h_source.tex
+++ b/FinalWork/Doc/latex/menu_8h_source.tex
@@ -1,23 +1,23 @@
 \doxysection{menu.\+h}
-\hypertarget{menu_8h_source}{}\label{menu_8h_source}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.h@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.h}}
-\mbox{\hyperlink{menu_8h}{Go to the documentation of this file.}}
+\label{menu_8h_source}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.h@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/menu.h}}
+\textbf{ См. документацию.}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ }
 \DoxyCodeLine{00005\ }
 \DoxyCodeLine{00006\ \textcolor{preprocessor}{\#pragma\ once}}
 \DoxyCodeLine{00007\ }
-\DoxyCodeLine{00011\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{menu_8h_a3f59019099538e8aa23e72a544461c26}{displayMainMenu}}();}
+\DoxyCodeLine{00011\ \textcolor{keywordtype}{void}\ displayMainMenu();}
 \DoxyCodeLine{00012\ }
-\DoxyCodeLine{00017\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{menu_8h_ae56915d57ca4e27bd132a459ca83ed3d}{handleUserChoice}}(\textcolor{keywordtype}{int}\ choice);}
+\DoxyCodeLine{00017\ \textcolor{keywordtype}{void}\ handleUserChoice(\textcolor{keywordtype}{int}\ choice);}
 \DoxyCodeLine{00018\ }
-\DoxyCodeLine{00022\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{menu_8h_a7674a0c3701093c68e0ebe377251b0f1}{displayAddRecordMenu}}();}
+\DoxyCodeLine{00022\ \textcolor{keywordtype}{void}\ displayAddRecordMenu();}
 \DoxyCodeLine{00023\ }
-\DoxyCodeLine{00027\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{menu_8h_a7c177e87305e3a58c5ed79e8598ae687}{displayRemoveRecordMenu}}();}
+\DoxyCodeLine{00027\ \textcolor{keywordtype}{void}\ displayRemoveRecordMenu();}
 \DoxyCodeLine{00028\ }
-\DoxyCodeLine{00032\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{menu_8h_aa4da8ae286f95189175c89bbf249851f}{displayStatsMenu}}();}
+\DoxyCodeLine{00032\ \textcolor{keywordtype}{void}\ displayStatsMenu();}
 \DoxyCodeLine{00033\ }
-\DoxyCodeLine{00037\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{menu_8h_a4cfa87a81a57d04b37b450580084e9d2}{loadDataFromFile}}();}
+\DoxyCodeLine{00037\ \textcolor{keywordtype}{void}\ loadDataFromFile();}
 \DoxyCodeLine{00038\ }
-\DoxyCodeLine{00042\ \textcolor{keywordtype}{void}\ \mbox{\hyperlink{menu_8h_ac396e0896eccd3a8bf8439adb18bf394}{displayAllRecordsMenu}}();}
+\DoxyCodeLine{00042\ \textcolor{keywordtype}{void}\ displayAllRecordsMenu();}
 
 \end{DoxyCode}
