--- a/FinalWork/Doc/latex/config_8h_source.tex
+++ b/FinalWork/Doc/latex/config_8h_source.tex
@@ -1,29 +1,39 @@
 \doxysection{config.\+h}
-\hypertarget{config_8h_source}{}\label{config_8h_source}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/config.h@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/config.h}}
-\mbox{\hyperlink{config_8h}{Go to the documentation of this file.}}
+\label{config_8h_source}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/config.h@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/config.h}}
+\textbf{ См. документацию.}
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ }
-\DoxyCodeLine{00005\ }
-\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#pragma\ once}}
 \DoxyCodeLine{00007\ }
-\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ <stdint.h>}}
+\DoxyCodeLine{00008\ \textcolor{preprocessor}{\#pragma\ once}}
 \DoxyCodeLine{00009\ }
-\DoxyCodeLine{00010\ \textcolor{preprocessor}{\#define\ SIZE\ 1000000}}
-\DoxyCodeLine{00011\ \textcolor{preprocessor}{\#define\ MAX\_RECORDS\ 900000}}
-\DoxyCodeLine{00012\ }
-\DoxyCodeLine{00013\ \textcolor{preprocessor}{\#define\ RED\_TEXT\ "{}\(\backslash\)x1B[31m"{}}}
-\DoxyCodeLine{00014\ \textcolor{preprocessor}{\#define\ GREEN\_TEXT\ "{}\(\backslash\)x1B[32m"{}}}
-\DoxyCodeLine{00015\ \textcolor{preprocessor}{\#define\ RESET\_TEXT\ "{}\(\backslash\)x1B[0m"{}}}
-\DoxyCodeLine{00016\ }
-\DoxyCodeLine{00020\ }
-\DoxyCodeLine{00021\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\{}
-\DoxyCodeLine{00022\ \ \ \ \ uint16\_t\ year;}
-\DoxyCodeLine{00023\ \ \ \ \ uint8\_t\ month;}
-\DoxyCodeLine{00024\ \ \ \ \ uint8\_t\ day;}
-\DoxyCodeLine{00025\ \ \ \ \ uint8\_t\ hours;}
-\DoxyCodeLine{00026\ \ \ \ \ uint8\_t\ minutes;}
-\DoxyCodeLine{00027\ \ \ \ \ int8\_t\ temperature;}
-\DoxyCodeLine{00028\ \}\ \mbox{\hyperlink{struct_temperature_record}{TemperatureRecord}};}
-\DoxyCodeLine{00029\ }
+\DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ <stdint.h>}}
+\DoxyCodeLine{00011\ }
+\DoxyCodeLine{00017\ \textcolor{preprocessor}{\#define\ MAX\_RECORDS\ 527040}}
+\DoxyCodeLine{00018\ }
+\DoxyCodeLine{00024\ \textcolor{preprocessor}{\#define\ RED\_TEXT\ "{}\(\backslash\)x1B[31m"{}}}
+\DoxyCodeLine{00025\ }
+\DoxyCodeLine{00031\ \textcolor{preprocessor}{\#define\ GREEN\_TEXT\ "{}\(\backslash\)x1B[32m"{}}}
+\DoxyCodeLine{00032\ }
+\DoxyCodeLine{00038\ \textcolor{preprocessor}{\#define\ RESET\_TEXT\ "{}\(\backslash\)x1B[0m"{}}}
+\DoxyCodeLine{00039\ }
+\DoxyCodeLine{00044\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }\{}
+\DoxyCodeLine{00049\ \ \ \ \ uint16\_t\ year;}
+\DoxyCodeLine{00050\ }
+\DoxyCodeLine{00055\ \ \ \ \ uint8\_t\ month;}
+\DoxyCodeLine{00056\ }
+\DoxyCodeLine{00061\ \ \ \ \ uint8\_t\ day;}
+\DoxyCodeLine{00062\ }
+\DoxyCodeLine{00067\ \ \ \ \ uint8\_t\ hours;}
+\DoxyCodeLine{00068\ }
+\DoxyCodeLine{00072\ \ \ \ \ uint8\_t\ minutes;}
+\DoxyCodeLine{00073\ }
+\DoxyCodeLine{00078\ \ \ \ \ int8\_t\ temperature;}
+\DoxyCodeLine{00079\ \}\ TemperatureRecord;}
+\DoxyCodeLine{00080\ }
+\DoxyCodeLine{00085\ \textcolor{keyword}{typedef}\ \textcolor{keyword}{struct\ }TemperatureNode\ \{}
+\DoxyCodeLine{00090\ \ \ \ \ TemperatureRecord\ data;}
+\DoxyCodeLine{00091\ }
+\DoxyCodeLine{00096\ \ \ \ \ \textcolor{keyword}{struct\ }TemperatureNode*\ next;}
+\DoxyCodeLine{00097\ \}\ TemperatureNode;}
 
 \end{DoxyCode}
