--- a/FinalWork/Doc/latex/main_8c.tex
+++ b/FinalWork/Doc/latex/main_8c.tex
@@ -1,10 +1,5 @@
-\doxysection{D\+:/\+Qt\+\_\+\+Project/\+MFTI/\+Course-\/\+C-\/\+Basic-\/\+Level/\+Final\+Work/main.c File Reference}
-\hypertarget{main_8c}{}\label{main_8c}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/main.c@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/main.c}}
-
-
-Главный модуль программы статистики температуры  
-
-
+\doxysection{Файл D\+:/\+Qt\+\_\+\+Project/\+MFTI/\+Course-\/\+C-\/\+Basic-\/\+Level/\+Final\+Work/main.c}
+\label{main_8c}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/main.c@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/main.c}}
 {\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include "{}climate\+\_\+data.\+h"{}}\newline
 {\ttfamily \#include $<$string.\+h$>$}\newline
@@ -14,38 +9,32 @@
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include "{}menu.\+h"{}}\newline
 {\ttfamily \#include "{}config.\+h"{}}\newline
-\doxysubsubsection*{Functions}
+\doxysubsubsection*{Функции}
 \begin{DoxyCompactItemize}
 \item 
-int \mbox{\hyperlink{main_8c_a0ddf1224851353fc92bfbff6f499fa97}{main}} (int argc, char \texorpdfstring{$\ast$}{*}argv\mbox{[}$\,$\mbox{]})
+int \textbf{ main} (int argc, char $\ast$argv[$\,$])
 \begin{DoxyCompactList}\small\item\em Главная функция программы \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
-\doxysubsection{Detailed Description}
-Главный модуль программы статистики температуры 
-
-
-
 \label{doc-func-members}
-\Hypertarget{main_8c_doc-func-members}
-\doxysubsection{Function Documentation}
-\Hypertarget{main_8c_a0ddf1224851353fc92bfbff6f499fa97}\index{main.c@{main.c}!main@{main}}
+\doxysubsection{Функции}
+\index{main.c@{main.c}!main@{main}}
 \index{main@{main}!main.c@{main.c}}
-\doxysubsubsection{\texorpdfstring{main()}{main()}}
+\doxysubsubsection{main()}
 {\footnotesize\ttfamily \label{main_8c_a0ddf1224851353fc92bfbff6f499fa97} 
-int main (\begin{DoxyParamCaption}\item[{int}]{argc}{, }\item[{char \texorpdfstring{$\ast$}{*}}]{argv}{\mbox{[}$\,$\mbox{]}}\end{DoxyParamCaption})}
+int main (\begin{DoxyParamCaption}\item[{int}]{argc}{, }\item[{char $\ast$}]{argv}{[$\,$]}\end{DoxyParamCaption})}
 
 
 
 Главная функция программы 
 
 
-\begin{DoxyParams}{Parameters}
+\begin{DoxyParams}{Аргументы}
 {\em argc} & Количество аргументов \\
 \hline
 {\em argv} & Массив аргументов \\
 \hline
 \end{DoxyParams}
-\begin{DoxyReturn}{Returns}
+\begin{DoxyReturn}{Возвращает}
 int Статус завершения программы 
 \end{DoxyReturn}
