--- a/FinalWork/Doc/latex/read_file_to_buffer_8c.tex
+++ b/FinalWork/Doc/latex/read_file_to_buffer_8c.tex
@@ -1,5 +1,5 @@
-\doxysection{D\+:/\+Qt\+\_\+\+Project/\+MFTI/\+Course-\/\+C-\/\+Basic-\/\+Level/\+Final\+Work/read\+File\+To\+Buffer.c File Reference}
-\hypertarget{read_file_to_buffer_8c}{}\label{read_file_to_buffer_8c}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/readFileToBuffer.c@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/readFileToBuffer.c}}
+\doxysection{Файл D\+:/\+Qt\+\_\+\+Project/\+MFTI/\+Course-\/\+C-\/\+Basic-\/\+Level/\+Final\+Work/read\+File\+To\+Buffer.c}
+\label{read_file_to_buffer_8c}\index{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/readFileToBuffer.c@{D:/Qt\_Project/MFTI/Course-\/C-\/Basic-\/Level/FinalWork/readFileToBuffer.c}}
 
 
 Реализация функций чтения данных о температуре из файла  
@@ -11,53 +11,25 @@
 {\ttfamily \#include $<$stdlib.\+h$>$}\newline
 {\ttfamily \#include $<$ctype.\+h$>$}\newline
 {\ttfamily \#include "{}climate\+\_\+data.\+h"{}}\newline
-\doxysubsubsection*{Macros}
+\doxysubsubsection*{Функции}
 \begin{DoxyCompactItemize}
 \item 
-\Hypertarget{read_file_to_buffer_8c_aa90cac659d18e8ef6294c7ae337f6b58}\label{read_file_to_buffer_8c_aa90cac659d18e8ef6294c7ae337f6b58} 
-\#define {\bfseries SUCCESS}~0
-\item 
-\Hypertarget{read_file_to_buffer_8c_abde48ee05fd7b864a4f44ed92afd066e}\label{read_file_to_buffer_8c_abde48ee05fd7b864a4f44ed92afd066e} 
-\#define {\bfseries FILE\+\_\+\+OPEN\+\_\+\+ERROR}~-\/1
-\item 
-\Hypertarget{read_file_to_buffer_8c_a93760118ddb4cf03cfc65b2f2068930b}\label{read_file_to_buffer_8c_a93760118ddb4cf03cfc65b2f2068930b} 
-\#define {\bfseries INVALID\+\_\+\+FORMAT}~-\/2
-\item 
-\Hypertarget{read_file_to_buffer_8c_a6f03a5b05aec3a0d5f69128cee8b4968}\label{read_file_to_buffer_8c_a6f03a5b05aec3a0d5f69128cee8b4968} 
-\#define {\bfseries BUFFER\+\_\+\+OVERFLOW}~-\/3
-\item 
-\Hypertarget{read_file_to_buffer_8c_a98e3929e6949250eb69f579b5fa83f3d}\label{read_file_to_buffer_8c_a98e3929e6949250eb69f579b5fa83f3d} 
-\#define {\bfseries INVALID\+\_\+\+EXTENSION}~-\/4
-\item 
-\Hypertarget{read_file_to_buffer_8c_a84b8de4d668a81384973b5f84430fc4c}\label{read_file_to_buffer_8c_a84b8de4d668a81384973b5f84430fc4c} 
-\#define {\bfseries INVALID\+\_\+\+PARAM}~-\/5
-\end{DoxyCompactItemize}
-\doxysubsubsection*{Functions}
-\begin{DoxyCompactItemize}
-\item 
-int \mbox{\hyperlink{read_file_to_buffer_8c_a2b1d20e37df3855f78444e99668b79be}{read\+File\+To\+Buffer}} (char \texorpdfstring{$\ast$}{*}file\+Name, char \texorpdfstring{$\ast$}{*}buffer)
+int \textbf{ read\+File\+To\+Buffer} (char $\ast$file\+Name)
 \begin{DoxyCompactList}\small\item\em Читает данные о температуре из CSV файла в буфер \end{DoxyCompactList}\end{DoxyCompactItemize}
-\doxysubsubsection*{Variables}
-\begin{DoxyCompactItemize}
-\item 
-\Hypertarget{read_file_to_buffer_8c_a9f512339855545c0f84395287818ceba}\label{read_file_to_buffer_8c_a9f512339855545c0f84395287818ceba} 
-\mbox{\hyperlink{struct_temperature_record}{Temperature\+Record}} {\bfseries tmp\+Sensor\+Data}
-\end{DoxyCompactItemize}
 
 
-\doxysubsection{Detailed Description}
+\doxysubsection{Подробное описание}
 Реализация функций чтения данных о температуре из файла 
 
 
 
 \label{doc-func-members}
-\Hypertarget{read_file_to_buffer_8c_doc-func-members}
-\doxysubsection{Function Documentation}
-\Hypertarget{read_file_to_buffer_8c_a2b1d20e37df3855f78444e99668b79be}\index{readFileToBuffer.c@{readFileToBuffer.c}!readFileToBuffer@{readFileToBuffer}}
+\doxysubsection{Функции}
+\index{readFileToBuffer.c@{readFileToBuffer.c}!readFileToBuffer@{readFileToBuffer}}
 \index{readFileToBuffer@{readFileToBuffer}!readFileToBuffer.c@{readFileToBuffer.c}}
-\doxysubsubsection{\texorpdfstring{readFileToBuffer()}{readFileToBuffer()}}
-{\footnotesize\ttfamily \label{read_file_to_buffer_8c_a2b1d20e37df3855f78444e99668b79be} 
-int read\+File\+To\+Buffer (\begin{DoxyParamCaption}\item[{char \texorpdfstring{$\ast$}{*}}]{file\+Name}{, }\item[{char \texorpdfstring{$\ast$}{*}}]{buffer}{}\end{DoxyParamCaption})}
+\doxysubsubsection{readFileToBuffer()}
+{\footnotesize\ttfamily \label{read_file_to_buffer_8c_ada12e1997ced9a813d0dcea2d9310b5c} 
+int read\+File\+To\+Buffer (\begin{DoxyParamCaption}\item[{char $\ast$}]{file\+Name}{}\end{DoxyParamCaption})}
 
 
 
@@ -66,12 +38,10 @@ int read\+File\+To\+Buffer (\begin{DoxyParamCaption}\item[{char \texorpdfstring{
 Читает содержимое файла в буфер
 
 
-\begin{DoxyParams}{Parameters}
-{\em file\+Name} & Имя файла для чтения \\
-\hline
-{\em buffer} & Буфер для хранения содержимого файла \\
+\begin{DoxyParams}{Аргументы}
+{\em file\+Name} & Имя файла для чтения $\ast$ \\
 \hline
 \end{DoxyParams}
-\begin{DoxyReturn}{Returns}
+\begin{DoxyReturn}{Возвращает}
 int Код статуса (SUCCESS или код ошибки) 
 \end{DoxyReturn}
